--- a/Index.HTML
+++ b/Index.HTML
@@ -12,7 +12,49 @@
 <body>
 <h1><i>Sydkorea<i></h1>
 <!-- Kommentar -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.topnav {
+  overflow: hidden;
+  background-color: #FF8C00;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #FF8C00;
+  color: darkorange;
+}
+
+.topnav a.active {
+  background-color: 	#FFFFFF;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#Gode råd">Gode råd</a>
+  <a href="#Billeder">Billeder</a>
+  <a href="#Flere facts">Flere facts</a>
+</div>
+
+<div style="padding-left:16px">
+</div>
 <p style="border:2px solid black;">Sydkorea har omkring 51 mio indbyggere.<br>
 I Seoul er der ca 22 mio indbyggere, hvilket gør det til en af verdens største byer.<br>
 Sydkorea er formelt stadig i krig med deres nordlige naboer, Nordkorea.<br>
@@ -23,5 +65,6 @@ Seoul har en verdens største metrosystemer.<br>
 </p>
 <img src="flag of south korea.jpg" alt="Trulli" width="300" height="200">
 <hr>
+
 </body>
 </html>
