--- a/Index.HTML
+++ b/Index.HTML
@@ -63,7 +63,8 @@ Seoul har en verdens største metrosystemer.<br>
 <p> Sydkorea er et sygt land, det bliver grineren for jer <p>
 <a href="https://da.wikipedia.org/wiki/Sydkorea">Se mere om Sydkorea her</a>
 </p>
-<img src="flag of south korea.jpg" alt="Trulli" width="300" height="200">
+<img src="flag_of_south_korea.jpg"
+ width="300" height="200">
 <hr>
 
 </body>
